Mask sensitive parameters (#1188)
* Mask and preserve sensitive parameters during edit

* doc updates

* secure and remove Printf

* fix masking of resource processor parameters

* fix tests

* sequence of tests to confirm sensitive parameters are preserved yet editable

* use password field for sensitive parameters

* add sensitive parameters tests for configuration

* parameter validation

* include sensitive in default options

* add sensitive: false to mocked responses

* fix formatting of StringParamInput.tsx and fix comment

* fix issue with dependency updates not preserving sensitive parameters

* move ContextWithoutSensitiveParameterMasking to where the configuration is loaded for an agent to avoid masking in the agent configuration

* added test for processor-type changes

* fix masking for old versions and history

* password => sensitive
