# model/processor.go
@@ -37,6 +37,7 @@ type Processor struct {
 }
 
 var _ parameterizedResource = (*Processor)(nil)
+var _ HasSensitiveParameters = (*Processor)(nil)
 
 // ValidateWithStore checks that the processor is valid, returning an error if it is not. It uses the store to retrieve the
 // processor type so that parameter values can be validated against the parameter definitions.
@@ -135,4 +136,18 @@ func (s *Processor) PrintableFieldValue(title string) string {
 	default:
 		return s.ResourceMeta.PrintableFieldValue(title)
 	}
+}
+
+// ----------------------------------------------------------------------
+
+// MaskSensitiveParameters masks sensitive parameter values based on the ParameterDefinitions in the ResourceType
+func (s *Processor) MaskSensitiveParameters(ctx context.Context) {
+	s.Spec.maskSensitiveParameters(ctx)
+}
+
+// PreserveSensitiveParameters will replace parameters with the SensitiveParameterPlaceholder value with the value of
+// the parameter from the existing resource. This does nothing if existing is nil because there is no existing
+// resource.
+func (s *Processor) PreserveSensitiveParameters(ctx context.Context, existing *AnyResource) error {
+	return PreserveSensitiveParameters(ctx, s, existing)
 }
